kubernetes/apps/rook-ceph/rook-ceph/cluster/httproute-dashboard-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard-envoy
  annotations:
    homepage.shamubernetes.com/enabled: "true"
    homepage.shamubernetes.com/name: "Rook Ceph"
    homepage.shamubernetes.com/description: "Inspect cluster storage"
    homepage.shamubernetes.com/group: "Infrastructure"
    homepage.shamubernetes.com/order: "10"
    homepage.shamubernetes.com/favorite: "false"
    homepage.shamubernetes.com/icon: "dashboard-icons:rook"
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "rook.${HOME_DOMAIN}"
  rules:
  - backendRefs:
    - name: rook-ceph-mgr-dashboard
      port: 7000
