kubernetes/apps/rook-ceph/rook-ceph/cluster/httproute-storage-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph-objectstore-envoy
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "rgw.${HOME_DOMAIN}"
  rules:
  -
    backendRefs:
    - name: rook-ceph-rgw-ceph-objectstore
      port: 80
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plane-uploads-envoy
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "plane.${HOME_DOMAIN}"
  rules:
  -
    matches:
    - path:
        type: PathPrefix
        value: /uploads
    backendRefs:
    - name: rook-ceph-rgw-ceph-objectstore
      port: 80
